# 3d_model_color_deal

./: CMakeLists.txt  README.md
include/: NodeImageVisitor.cpp  NodeImageVisitor.h
src/: main.cpp  test_node_image_visitor.cpp
